removed favicon, fixed spacing for the about us page

--- a/poe.css
+++ b/poe.css
@@ -175,7 +175,7 @@ background-color: white;
 
 .columnteamdescription{
 	width: 340px; 
-	height:690px;
+	height:540px;
 	display: inline-block;
 }
 .pictureofteam{
